# peculiar-audience

./: .pre-commit-config.yaml  pyproject.toml
src/peculiar_audience/: __init__.py  _iterable.py  _mapping.py  _sequence.py  _types.py  preconditions.py  shadow.py
tests/: test__iterable.py  test__mapping.py  test__sequence.py  test_preconditions.py  test_shadow.py
